Implemented Collection 2 (partially work, it requires search how run pyccd for collection 2)

--- a/ui/CCD_Plugin_dialog_base.ui
+++ b/ui/CCD_Plugin_dialog_base.ui
@@ -270,17 +270,17 @@
           <widget class="QComboBox" name="band">
            <item>
             <property name="text">
-             <string>BLUE</string>
+             <string>Blue</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>GREEN</string>
+             <string>Green</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>RED</string>
+             <string>Red</string>
             </property>
            </item>
            <item>
@@ -296,11 +296,6 @@
            <item>
             <property name="text">
              <string>SWIR2</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>THERMAL</string>
             </property>
            </item>
           </widget>
