--- a/ui/CCD_Plugin_dialog_base.ui
+++ b/ui/CCD_Plugin_dialog_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1455</width>
-    <height>619</height>
+    <width>1056</width>
+    <height>530</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -533,16 +533,16 @@
     </widget>
    </item>
    <item>
-    <widget class="QWebView" name="plot_webview">
+    <widget class="QWebView" name="plot_webview" native="true">
      <property name="acceptDrops">
       <bool>false</bool>
      </property>
-     <property name="url">
+     <property name="url" stdset="0">
       <url>
        <string>about:blank</string>
       </url>
      </property>
-     <property name="zoomFactor">
+     <property name="zoomFactor" stdset="0">
       <double>1.600000000000000</double>
      </property>
     </widget>
