--- a/ui/CCD_Plugin_dialog_base_QWebEngine.ui
+++ b/ui/CCD_Plugin_dialog_base_QWebEngine.ui
@@ -141,6 +141,9 @@
          <item>
           <widget class="QWidget" name="widget_7" native="true">
            <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <property name="spacing">
+             <number>3</number>
+            </property>
             <property name="leftMargin">
              <number>0</number>
             </property>
@@ -267,7 +270,7 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="0" colspan="5">
+         <item row="0" column="0" colspan="2">
           <widget class="QLabel" name="label">
            <property name="text">
             <string>Date Range</string>
