--- a/ui/CCD_Plugin_dockwidget_QWebEngine.ui
+++ b/ui/CCD_Plugin_dockwidget_QWebEngine.ui
@@ -542,18 +542,6 @@
     </item>
     <item row="0" column="0" colspan="2">
      <widget class="QgsMessageBar" name="MsgBar">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>0</width>
-        <height>20</height>
-       </size>
-      </property>
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
       </property>
@@ -576,7 +564,7 @@
      </spacer>
     </item>
     <item row="1" column="1" rowspan="3">
-     <widget class="QWebEngineView" name="plot_webview" native="true">
+     <widget class="QWebEngineView" name="plot_webview">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
@@ -592,12 +580,12 @@
       <property name="acceptDrops">
        <bool>false</bool>
       </property>
-      <property name="url" stdset="0">
+      <property name="url">
        <url>
         <string>about:blank</string>
        </url>
       </property>
-      <property name="zoomFactor" stdset="0">
+      <property name="zoomFactor">
        <double>1.400000000000000</double>
       </property>
      </widget>
