--- a/ui/CCD_Plugin_dockwidget_QWebView.ui
+++ b/ui/CCD_Plugin_dockwidget_QWebView.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>100</height>
+    <height>284</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -148,7 +148,7 @@
                 <enum>QAbstractSpinBox::NoButtons</enum>
                </property>
                <property name="decimals">
-                <number>4</number>
+                <number>5</number>
                </property>
                <property name="minimum">
                 <double>-90.000000000000000</double>
@@ -174,7 +174,7 @@
                 <enum>QAbstractSpinBox::NoButtons</enum>
                </property>
                <property name="decimals">
-                <number>4</number>
+                <number>5</number>
                </property>
                <property name="minimum">
                 <double>-180.000000000000000</double>
@@ -246,7 +246,7 @@
              <item>
               <widget class="QLabel" name="label_8">
                <property name="text">
-                <string>Lansat</string>
+                <string>Collection</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -256,22 +256,27 @@
              <item>
               <widget class="QComboBox" name="collection">
                <property name="currentText">
-                <string>Collection 2</string>
+                <string>Landsat col. 1</string>
                </property>
                <property name="currentIndex">
-                <number>1</number>
+                <number>0</number>
                </property>
                <property name="sizeAdjustPolicy">
                 <enum>QComboBox::AdjustToContents</enum>
                </property>
                <item>
                 <property name="text">
-                 <string>Collection 1</string>
+                 <string>Landsat col. 1</string>
                 </property>
                </item>
                <item>
                 <property name="text">
-                 <string>Collection 2</string>
+                 <string>Landsat col. 2</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Sentinel-2</string>
                 </property>
                </item>
               </widget>
@@ -300,7 +305,7 @@
              <item>
               <widget class="QLabel" name="label_2">
                <property name="text">
-                <string>Band / Index</string>
+                <string>Band / Index to plot</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -453,16 +458,6 @@
           <property name="spacing">
            <number>3</number>
           </property>
-          <item row="2" column="0">
-           <widget class="QSpinBox" name="start_doy">
-            <property name="minimum">
-             <number>1</number>
-            </property>
-            <property name="maximum">
-             <number>364</number>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="1">
            <widget class="QSpinBox" name="end_doy">
             <property name="minimum">
@@ -484,6 +479,141 @@
             <property name="alignment">
              <set>Qt::AlignCenter</set>
             </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QSpinBox" name="start_doy">
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>364</number>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QWidget" name="widget_11" native="true">
+         <layout class="QGridLayout" name="gridLayout_5">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <property name="spacing">
+           <number>3</number>
+          </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_4">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Detection Bands / Indices</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QgsCheckableComboBox" name="box_breakpointbands">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="currentText">
+             <string>Blue, Green, Red, NIR, SWIR1, SWIR2</string>
+            </property>
+            <property name="checkedItems">
+             <stringlist>
+              <string>Blue</string>
+              <string>Green</string>
+              <string>Red</string>
+              <string>NIR</string>
+              <string>SWIR1</string>
+              <string>SWIR2</string>
+             </stringlist>
+            </property>
+            <item>
+             <property name="text">
+              <string>Blue</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Green</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Red</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>NIR</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>SWIR1</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>SWIR2</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>NBR</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>NDVI</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>EVI</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>EVI2</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>BRIGHTNESS</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>GREENNESS</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>WETNESS</string>
+             </property>
+            </item>
            </widget>
           </item>
          </layout>
@@ -580,7 +710,7 @@
       <property name="acceptDrops">
        <bool>false</bool>
       </property>
-      <property name="url">
+      <property name="url" stdset="0">
        <url>
         <string>about:blank</string>
        </url>
@@ -591,6 +721,11 @@
   </widget>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>QgsCheckableComboBox</class>
+   <extends>QComboBox</extends>
+   <header>qgscheckablecombobox.h</header>
+  </customwidget>
   <customwidget>
    <class>QWebView</class>
    <extends>QWidget</extends>
